src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
/* ... */
 @else { .webGlobalToolbar {
      margin-left: 55px;
      padding-right: 51px;
   }
 }

.desktopGlobalToolbar {
   background: DESKTOPGLOBALTOOLBARBACKGROUND bottom repeat-x;
}

.desktopGlobalToolbarWrapper {
   
}

.rstudio-themes-flat .desktopGlobalToolbarWrapper {
   height: 24px;
}

.windowFrameToolbarButton {
   margin-top: -2px;
   margin-left: 4px;
}

.statusBarMenu {
   font-size: 11px;
}
.statusBarMenu .gwt-MenuItem {
   padding-right: 30px;
}

.miniToolbar {
   margin-top: 4px;
}
.miniToolbar img {
   margin-right: 6px;
}


/** Help Search box **/
.search {
   position: relative;
   top: -1px;
   margin-right: 8px;
   width: 120px;
   height: 18px;
}
.search .left {
   position: absolute;
   top: 0;
   left: 0;
   width: 6px;
   height: 18px;
   background: SEARCHFIELDLEFT top no-repeat;
}
.search .center {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 6px;
   right: 6px;
   background: SEARCHFIELDTILE top repeat-x;
}
.search .right {
   position: absolute;
   top: 0;
   right: 0;
   width: 6px;
   height: 18px;
   background: SEARCHFIELDRIGHT top no-repeat;
}
.searchMagGlass {
   position: absolute;
   top: 3px;
   left: 0;
   width: 14px;
   height: 13px;
}
.clearSearch {
   position: absolute;
   top: 4px;
   right: 0;
   width: 11px;
   height: 11px;
}
.searchBoxContainer {
   position: absolute;
   top: 0;
   bottom: 1px;
   left: 18px;
   right: 18px;
}
.searchBoxContainer2 {
   position: absolute;
   top: 0;
   bottom: 1px;
   left: 0;
   right: 2px;
}
.searchBox {
   width: 100%;
   height: 100%;
   border: 0;
   margin: 0;
   outline: none;
   font-size: 10px;
   background-color: transparent;
}
body.windows .searchBox {
   font-size: 11px;
}
body.ubuntu_mono .searchBox {
   font-size: 11px;
}

/** Workbench **/

.dialogMessage {
   padding-left: 8px;
   padding-top: 12px;
   width: 300px;
   padding-bottom: 12px;
   overflow-wrap: break-word;
   word-wrap: break-word;
}

.sessionAbendMessage {
   padding-left: 8px;
   width: 300px;
}

.applicationHeaderStrong {
   font-weight: bold;
}

@sprite td.environmentHierarchicalCol {
   width: 32px;
   height: 15px;
   gwt-image: 'inspectObject2x';
   background-position: right center;
   background-size: 32px 15px;
}

.rstudio-themes-flat td.environmentHierarchicalCol {
   background: none;
}

@sprite td.environmentDataFrameCol {
   width: 32px;
   height: 15px;
   gwt-image: 'zoomDataset2x';
   background-position: right center;
   background-size: 32px 15px;
}

.rstudio-themes-flat td.environmentDataFrameCol {
   background: none;
}

@sprite td.environmentFunctionCol {
   width: 32px;
   height: 15px;
   gwt-image: 'viewFunctionCode2x';
   background-position: right center;
   background-size: 32px 15px;
}

.rstudio-themes-flat td.environmentFunctionCol {
   background: none;
}

.odd {
   background-color: #f2f2f2;
}

.EditDialog {
   border: 1px solid #BBB;  
   background-color: white;
}

.showFile {
  font-size: 12px;
  padding-left: 5px; 
  border: 1px solid #BBB; 
  background-color: white;
}

.showFileFixed {
  font-size: 12px;
  padding-left: 5px;
  border: 1px solid #BBB;  
  background-color: white;
}

.fileUploadPanel {
  width: 350px;
}

.fileUploadPanel .fileUploadField {
  margin-left: 7px;
  margin-top: 10px;
  margin-bottom: 8px;
}

.fileUploadPanel .fileUploadTipLabel {
   border: 1px solid #BBB; 
   padding: 5px;
   font-size: 11px;
}

.fileList {
   font-size: 12px;
}

.fileList input[type=checkbox] {
   margin-top: 0;
   margin-bottom: 0;
}

.locatorPanel {
   border: none;
   padding: 0;
   margin: 0;
}

.locatorPanel:hover {
   cursor: crosshair;
}

.tabOverflowPopup {
   z-index: 10;
}

.tabOverflowPopup .gwt-MenuBar>table {
   width: 100%;
}
.tabOverflowPopup .search {
   margin: 2px 0 2px 0;
   min-width: 130px;
   width: 100%;
}

.selectWidget {
   margin-bottom: 12px;
}

.selectWidget .gwt-Label {
   margin-right: 4px;  
   margin-left: 4px; 
}

.textBoxWithButton input[type=text] {
   position: relative;
   top: 1px;
   height: 21px;
   border: 1px solid #999;
}

.textBoxWithButton .gwt-Label {
   margin-bottom: 1px;	
}


.fullscreenCaptionIcon {
  margin-top: -1px;
  margin-right: 5px;
}
 
.fullscreenCaptionLabel {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 11px;
  cursor: default;
}

.presentationNavigatorLabel {
  white-space: nowrap;  
  text-overflow: ellipsis;
  overflow: hidden;
}

.notResizable {
  resize: none;
}

.linux .gwt-CheckBox {
  margin-bottom: 4px;
}

/* checkboxes on the Cocoa (Mac) desktop client and checks/radio buttons on the
 * Linux desktop client have some rendering and positioning inconsistencies, so
 * we redraw them with CSS. */

.macintosh .gwt-CheckBox input[type="checkbox"],
.linux .gwt-CheckBox input[type="checkbox"],
.linux .gwt-RadioButton input[type="radio"],
.windows-highdpi .gwt-CheckBox input[type="checkbox"],
.windows-highdpi .gwt-RadioButton input[type="radio"] {
  -webkit-appearance: none;
  outline: none;
  width: 13px;
  height: 13px;
  border: 1px solid #b0b0b0;
  background: #ffffff;
  vertical-align: middle;
  margin: 3px 3px 5px 3px;
}

.rstudio-themes-flat .rstudio-themes-dark .gwt-CheckBox input[type="checkbox"] {
   background: #d3d8dc;
   border-color: rgb(45,60,75);
}

.macintosh .gwt-CheckBox input[type="checkbox"],
.linux .gwt-CheckBox input[type="checkbox"],
.windows-highdpi .gwt-CheckBox input[type="checkbox"] {
  -webkit-border-radius: 3px;
}

.linux .gwt-RadioButton input[type="radio"],
.windows-highdpi .gwt-RadioButton input[type="radio"] {
  -webkit-border-radius: 7px;
}
/* ... */

